fix wrapping.

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -39,6 +39,7 @@ html {
   @include span(1);
   padding-left: $gutter-width;
   padding-right: $gutter-width;
+  overflow: hidden;
 }
 
 body {
